feature(methods) added all and destroy methods

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "dev": "webpack --watch src --mode development"
+    "dev": "webpack --watch src --mode development",
+    "tsc": "tsc --watch src/*.ts"
   },
   "keywords": [
     "tools",
