--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "dev": "webpack --watch src --mode development",
-    "tsc": "tsc --watch src/"
+    "tsc": "tsc --watch src/ispiredb.ts"
   },
   "keywords": [
     "tools",
